# Raytracer

./: .gitignore  CMakeLists.txt  ReadeME.md  compile.sh  file.conf
include/: Raytracer.hpp
include/Materials/: IMaterial.hpp  Metal.hpp  Mirror.hpp
include/Math/: Vector.hpp
include/Primitives/: Hittables.hpp  IPrimitives.hpp  Record.hpp  Spheres.hpp
include/Scene/: Camera.hpp  Ray.hpp
include/Utils/: Color.hpp  Interval.hpp  Utility.hpp
src/: main.cpp
